# software-engineering

./: .gitignore  DESIGN_PATTERNS_ANALYSIS.md  DESIGN_PATTERNS_CONCLUSOES.md  DESIGN_PATTERNS_INSUMOS.md  Qwen3-Coder-30B-A3B-Instruct.md  README.md  RELATORIO_PERGUNTAS_INCOMPLETAS.md
code-analysis/: .gitignore  COLAB_SETUP.md  Makefile  README.md  colab_analysis.ipynb  llm_analysis.py  llm_analysis_working.py  pyproject.toml  requirements.txt  run.ipynb
code-analysis/src/: analyzer.py  cli.py  commands.py  config.py  file_reader.py  indexer.py  llm_manager.py  repository.py  tree_builder.py
documentation/: DESIGN_PATTERNS_ANALYSIS.md  DESIGN_PATTERNS_CONCLUSOES.md  documentation.md  microsoft_phi.md
manual-analysis/: .gitignore  COLAB.md  Makefile  README.md  pyproject.toml  run.ipynb
manual-analysis/src/manual/: __init__.py  command.py  config.py  llm_manager.py  orchestrator.py  summarizer.py
