[project]
name = "code-analysis"
version = "0.1.0"
description = "A tool that leverages Hugging Face models to parse source code and automatically detect classic (GoF) design patterns within any given codebase."
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "click>=8.1.0"
]

[project.scripts]
analyze = "commands:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
