[project]
name = "manual-analysis"
version = "0.1.0"
description = "A tool for manual iterations with a hugging face model."
authors = [
    {name = "Josias Ribeiro", email = "josias.junior@academico.ufs.br"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "accelerate>=0.20.0",
    "click>=8.1.0",
    "rich>=13.0.0"
]

[project.scripts]
chat = "manual.command:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
